--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ graphql_client = {version = "0.14.0", features = [ "reqwest", "reqwest-rustls"] 
 open = "5.3.2"
 ratatui = "0.29.0"
 reqwest = {version = "0.11", features = ["blocking", "json"]}
-serde = "1.0.219"
+serde = {version = "1.0.219", features = ["derive"]}
 tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
 tokio-stream = "0.1.17"
 tui-markdown = { version = "0.3.5", features = ["highlight-code"] }
