--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ chrono = "0.4.41"
 cli-clipboard = "0.4.0"
 color-eyre = "0.6.3"
 crossterm = { version = "0.29.0", features = ["event-stream"] }
+duplicate = "2.0.0"
 graphql_client = {version = "0.14.0", features = [ "reqwest", "reqwest-rustls"] }
 open = "5.3.2"
 ratatui = "0.29.0"
