working but need new tab and a lot of refactoring

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ license = "MIT"
 chrono = "0.4.41"
 cli-clipboard = "0.4.0"
 color-eyre = "0.6.3"
-crossterm = { version = "0.29.0", features = ["event-stream"] }
+crossterm = { version = "0.28.1", features = ["event-stream"] }
 duplicate = "2.0.0"
 graphql_client = {version = "0.14.0", features = [ "reqwest", "reqwest-rustls"] }
 open = "5.3.2"
@@ -23,7 +23,9 @@ reqwest = {version = "0.11", features = ["blocking", "json"]}
 serde = {version = "1.0.219", features = ["derive"]}
 tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
 tokio-stream = "0.1.17"
+tui-input = "0.14.0"
 tui-markdown = { version = "0.3.5", features = ["highlight-code"] }
+tui-textarea = "0.7.0"
 
 [dev-dependencies]
 insta = "1.43.1"
